--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,27 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    %nav.navbar.navbar-default
+      .navbar-header
+        %button.navbar-toggle.collapsed{type: 'button', data: { toggle: 'collapse', target: '#js-navbar-collapse'}}
+          %span.sr-only
+            Toggle navigation
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{href: root_url}
+          n2jkAcademy
+      .collapse.navbar-collapse#js-navbar-collapse
+        -#%ul.nav.navbar-nav.navbar-right
+        -#  - if user_signed_in?
+        -#    %li
+        -#      %button.btn.btn-success.navbar-btn.js-new-post-button{data: {url: new_post_path}}
+        -#        投稿
+        -#    %li.dropdown
+        -#      %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
+        -#        = current_user.name
+        -#      %ul.dropdown-menu
+        -#        %li= link_to 'アカウント設定', '#'
+        -#        %li= link_to 'ログアウト', sign_out_path, method: :delete
+
     = yield
