--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,6 @@
-- unless user_signed_in?
+- if user_signed_in?
+  = render 'main'
+- else
   .text-center
     %h3 n2jkAcademy
     = link_to 'GitHubアカウントでログイン', sign_in_path, class: 'btn btn-success'
