--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %nav.navbar.navbar-default
+    %nav.header.navbar.navbar-default
       .navbar-header
         %button.navbar-toggle.collapsed{type: 'button', data: { toggle: 'collapse', target: '#js-navbar-collapse'}}
           %span.sr-only
