--- a/app/views/home/_main.html.haml
+++ b/app/views/home/_main.html.haml
@@ -1,7 +1,7 @@
 .app
   .app__sidebar.js-nicescroll
     ユーザーリスト
-
+    .div{style: 'width: 100px; height: 1000px; background-color: red;'}
   .app__main.js-nicescroll
     日報
 
