--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,9 +20,9 @@
       .collapse.navbar-collapse#js-navbar-collapse
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
-            -#%li
-            -#  %button.btn.btn-success.navbar-btn.js-new-post-button{data: {url: new_post_path}}
-            -#    投稿
+            %li
+              %button.btn.btn-success.navbar-btn{data: {toggle: 'modal', target: '#post-modal'}}
+                投稿
             %li.dropdown
               %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
                 = current_user.name
