ユーザーヘッダを追加

--- a/app/views/home/_main.html.haml
+++ b/app/views/home/_main.html.haml
@@ -1,10 +1,9 @@
 .app
   .app__sidebar.js-nicescroll
     = render 'users/users', users: User.order(posts_updated_at: :desc)
-  .app__main.js-post.js-nicescroll
-    日報
-
+  .app__main.js-nicescroll
+    .app__user-header.js-user-header
+    .app__post.js-post
   .app__posts-list.js-posts-list.js-nicescroll
-    日報リスト
 
 = render 'posts/modal_form'
