--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -4,12 +4,14 @@
   .panel-body
     .post__body.js-toggle-post-edit
       = simple_format(post.body)
-      = link_to fa_icon('pencil', text: '編集'), '.js-toggle-post-edit', class: 'btn btn-link btn-sm js-toggle-collapse-link'
-    .post__edit.js-toggle-post-edit.is-collapsed
-      = simple_form_for post, remote: true do |f|
-        = f.input :body, label: false, input_html: {rows: 15}
-        = f.button :submit, '更新', class: 'btn btn-warning btn-sm', data: {disable_with: '送信中...'}
-        = link_to 'キャンセル', '.js-toggle-post-edit', class: 'btn btn-default btn-sm js-toggle-collapse-link'
-        = link_to '削除', post, remote: true, method: :delete, class: 'btn btn-link btn-sm pull-right', data: {confirm: '削除してもよろしいですか？', disable_with: '削除中...'}
+      - if post.user == current_user
+        = link_to fa_icon('pencil', text: '編集'), '.js-toggle-post-edit', class: 'btn btn-link btn-sm js-toggle-collapse-link'
+    - if post.user == current_user
+      .post__edit.js-toggle-post-edit.is-collapsed
+        = simple_form_for post, remote: true do |f|
+          = f.input :body, label: false, input_html: {rows: 15}
+          = f.button :submit, '更新', class: 'btn btn-warning btn-sm', data: {disable_with: '送信中...'}
+          = link_to 'キャンセル', '.js-toggle-post-edit', class: 'btn btn-default btn-sm js-toggle-collapse-link'
+          = link_to '削除', post, remote: true, method: :delete, class: 'btn btn-link btn-sm pull-right', data: {confirm: '削除してもよろしいですか？', disable_with: '削除中...'}
 .post__comments
   = render 'comments/comments', post: post
