--- a/app/views/users/_users.html.haml
+++ b/app/views/users/_users.html.haml
@@ -4,6 +4,9 @@
       = link_to user, remote: true, class: 'user__item-link' do
         = image_tag user.image, class: 'user__icon'
         .user__info
-          .user__name= user.nickname || user.name
+          .user__name
+            = user.nickname || user.name
+            - if user.has_unreads_for(current_user)
+              %span.unread-dot-inline
           .user__posts-updated-at= l user.posts_updated_at.to_date
 
