--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,13 +23,19 @@
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             %li
-              %button.btn.btn-success.navbar-btn{data: {toggle: 'modal', target: '#post-modal'}}
-                投稿
+              - if mobile_device?
+                = link_to '投稿', new_post_path, class: 'navbar-link'
+              - else
+                %button.btn.btn-success.navbar-btn{data: {toggle: 'modal', target: '#post-modal'}}
+                  投稿
             %li.dropdown
               %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
                 = current_user.name
               %ul.dropdown-menu
                 %li= link_to 'アカウント設定', '#'
                 %li= link_to 'ログアウト', sign_out_path, method: :delete
-
-    = yield
+    - if mobile_device?
+      .mobile-app-container
+        = yield
+    - else
+      = yield
