--- a/app/views/posts/_list.html.haml
+++ b/app/views/posts/_list.html.haml
@@ -3,7 +3,7 @@
     %li.posts__list-item{id: "post-#{post.id}"}
       = link_to [post.user, post], remote: true, class: 'posts__list-item-link js-posts-list-item' do
         .posts__list-item-date
-          = l post.created_at
+          = l post.created_at.to_date
           - if post.not_read_yet?(current_user) || post.has_unread_comments?(current_user)
             %span.unread-dot-inline.js-unread-dot
         .posts__list-item-title= post.title
