--- a/app/views_mobile/posts/_index.html.haml
+++ b/app/views_mobile/posts/_index.html.haml
@@ -2,5 +2,8 @@
   - posts.each do |post|
     %li.list-group-item.mobile-post__container
       = link_to [post.user, post], class: 'mobile-post__link' do
-        .mobile-post__date= l post.created_at.to_date
+        %span.mobile-post__date= l post.created_at.to_date
+        %span.mobile-post__comment-count= fa_icon('comment', text: post.comments.count )
+        - if post.not_read_yet?(current_user) || post.has_unread_comments?(current_user)
+          %span.unread-dot-inline.js-unread-dot
         .mobile-post__title= post.title
