表示の調整

--- a/app/assets/stylesheets/views/mobile/_posts.sass
+++ b/app/assets/stylesheets/views/mobile/_posts.sass
@@ -1,11 +1,15 @@
 .mobile-posts
-.mobile-post__container
+.mobile-posts__post
 .mobile-post__link
   display: block
+  color: $_black
   &:active
     background-color: #cccccc
-.mobile-post__date
-.mobile-post__title
+  &:active, &:hover, &:focus
+    text-decoration: none
+.mobile-posts__date
+.mobile-posts__comment-count
+.mobile-posts__title
 
 .moblie-post__icon
   width: 30px
