--- a/app/assets/stylesheets/views/_posts.sass
+++ b/app/assets/stylesheets/views/_posts.sass
@@ -10,6 +10,9 @@
   display: block
   width: 100%
   height: 100%
+  color: $_black
+  &:active, &:hover, &:focus
+    text-decoration: none
 
 .posts__list-item-date
   font-size: 14px
