--- a/app/views_mobile/posts/_index.html.haml
+++ b/app/views_mobile/posts/_index.html.haml
@@ -1,9 +1,9 @@
 %ul.list-group.mobile-posts
   - posts.each do |post|
-    %li.list-group-item.mobile-post__container
+    %li.list-group-item.mobile-posts__post
       = link_to [post.user, post], class: 'mobile-post__link' do
-        %span.mobile-post__date= l post.created_at.to_date
-        %span.mobile-post__comment-count= fa_icon('comment', text: post.comments.count )
+        %span.mobile-posts__date= l post.created_at.to_date
+        %span.mobile-posts__comment-count= fa_icon('comment', text: post.comments.count )
         - if post.not_read_yet?(current_user) || post.has_unread_comments?(current_user)
           %span.unread-dot-inline.js-unread-dot
-        .mobile-post__title= post.title
+        .mobile-posts__title= post.title
