--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
               %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
                 = current_user.name
               %ul.dropdown-menu
-                %li= link_to 'アカウント設定', '#'
+                %li= link_to 'アカウント設定', '#user-modal', data: {toggle: 'modal'}
                 %li= link_to 'ログアウト', sign_out_path, method: :delete
     - if mobile_device?
       .mobile-app-container
