--- a/app/views/users/_users.html.haml
+++ b/app/views/users/_users.html.haml
@@ -1,3 +1,4 @@
+- users = User.write_some_post.order(posts_updated_at: :desc)
 %ul.users
   - users.each do |user|
     %li.user{data: {user_id: user.id}}
