--- a/app/views/mine/users/_modal_form.html.haml
+++ b/app/views/mine/users/_modal_form.html.haml
@@ -4,7 +4,7 @@
       .modal-header
         アカウント設定
       .modal-body
-        = simple_form_for current_user, url: user_path, method: :patch, remote: true do |f|
+        = simple_form_for current_user, url: mine_user_path, method: :patch, remote: true do |f|
           = f.input :nickname, label: 'ニックネーム'
           = f.input :email, label: 'メールアドレス'
           = f.input :mail_notification, label: 'メール通知'
