コメントのメール通知

--- a/app/views_mobile/users/_users.html.haml
+++ b/app/views_mobile/users/_users.html.haml
@@ -1,3 +1,4 @@
+- users = User.write_some_post.order(posts_updated_at: :desc)
 %ul.mobile-users
   - users.each do |user|
     %li.mobile-users__user
