週報のタイトルの切り詰め処理を変更

--- a/app/assets/stylesheets/views/_posts.sass
+++ b/app/assets/stylesheets/views/_posts.sass
@@ -19,6 +19,9 @@
 
 .posts__list-item-title
   font-size: 14px
+  white-space: nowrap
+  text-overflow: ellipsis
+  overflow: hidden
 
 .post__body
   position: relative
