--- a/app/assets/stylesheets/views/mobile/_posts.sass
+++ b/app/assets/stylesheets/views/mobile/_posts.sass
@@ -10,6 +10,9 @@
 .mobile-posts__date
 .mobile-posts__comment-count
 .mobile-posts__title
+  white-space: nowrap
+  text-overflow: ellipsis
+  overflow: hidden
 
 .moblie-post__icon
   width: 30px
