--- a/app/views_mobile/users/show.html.haml
+++ b/app/views_mobile/users/show.html.haml
@@ -6,7 +6,7 @@
     .mobile-user__info-container
       .mobile-user__info
         %span.mobile-user__name
-          = @user.name
+          = @user.nickname
         %span.mobile-user__posts-count
           投稿数 #{@user.posts.count}件
       .mobile-user__created-at
