--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,10 @@
               %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
                 = current_user.name
               %ul.dropdown-menu
-                %li= link_to 'アカウント設定', '#user-modal', data: {toggle: 'modal'}
+                - if mobile_device?
+                  %li= link_to 'アカウント設定', edit_mine_user_path
+                - else
+                  %li= link_to 'アカウント設定', '#user-modal', data: {toggle: 'modal'}
                 %li= link_to 'ログアウト', sign_out_path, method: :delete
     - if mobile_device?
       .mobile-app-container
